<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#009688">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valuesHeader_textView"
        android:id="@+id/valuesHeaderTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_textView"
        android:id="@+id/nameTextView"
        android:layout_below="@+id/valuesHeaderTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname_textView"
        android:id="@+id/surnameTextView"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="18sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_button"
        android:id="@+id/changeButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#009688"
        android:background="#ffffffff"
        android:singleLine="true"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"/>
</RelativeLayout>
