<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.adept386.sharedpreferencesexample.ChangeActivity"
                android:background="#006064">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeHeader_textView"
        android:id="@+id/changeHeaderTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="22sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_below="@+id/changeHeaderTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:hint="@string/name_editText"
        android:textColorHint="#80ffffff"
        android:textColor="@color/abc_primary_text_material_dark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surnameEditText"
        android:layout_below="@+id/nameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:hint="@string/surname_editText"
        android:textColorHint="#80ffffff"
        android:textColor="@color/abc_primary_text_material_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveChanges_button"
        android:id="@+id/saveChangesButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffffff"
        android:textColor="#006064"
        android:singleLine="true"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"/>
</RelativeLayout>
